<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SearchView
        android:id="@+id/search_bar1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="100dp"
        android:background="#DFECEA"
        android:iconifiedByDefault="false"
        android:queryHint="Suche nach deinen Lebensmitteln..."
        android:radius="120dp">

    </SearchView>

    <CheckBox
        android:id="@+id/Kaloriearm"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="277dp"
        android:layout_marginTop="156dp"
        android:text="@string/kaloriearm" />

    <CheckBox
        android:id="@+id/Vegetarisch"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="155dp"
        android:text="@string/vegetarisch" />

    <CheckBox
        android:id="@+id/Vegan"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:text="@string/vegan" />

    <CheckBox
        android:id="@+id/Fettarm"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="214dp"
        android:text="@string/fettarm" />

    <CheckBox
        android:id="@+id/Proteinreich"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="156dp"
        android:text="@string/proteinreich" />

    <TextView
        android:id="@+id/Letzte_Bestellungen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="286dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/letzte_bestellungen" />

    <TextView
        android:id="@+id/Empfehlungen"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/deine_heutigen_empfehlungen"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/Einkaufswagen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="166dp"
        android:text="@string/alle_empfehlungen_in_deinen_einkaufswagen_bernehmen" />


</RelativeLayout>
