<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SearchView
        android:id="@+id/search_bar1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="100dp"
        android:background="#DFECEA"
        android:iconifiedByDefault="false"
        android:queryHint="Suche nach deinen Lebensmitteln..."
        android:radius="120dp">

    </SearchView>

    <CheckBox
        android:id="@+id/Kaloriearm"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="277dp"
        android:layout_marginTop="156dp"
        android:text="@string/kaloriearm" />

    <CheckBox
        android:id="@+id/Vegetarisch"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="155dp"
        android:text="@string/vegetarisch" />

    <CheckBox
        android:id="@+id/Vegan"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:text="@string/vegan" />

    <CheckBox
        android:id="@+id/Fettarm"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="214dp"
        android:text="@string/fettarm" />

    <CheckBox
        android:id="@+id/Proteinreich"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="156dp"
        android:text="@string/proteinreich" />

    <TextView
        android:id="@+id/Letzte_Bestellungen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="286dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/letzte_bestellungen" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Letzte_Bestellungen">
        <TextView
            android:id="@+id/textAlle"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Alle"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textFruechte"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Früchte"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textHuelsenfruechte"
            android:layout_width="111dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Hülsenfrüchte"
            android:textColor="#000000" />



    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="364dp"
        android:layout_height="299dp"
        android:layout_below="@id/Letzte_Bestellungen"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="Inhaltsbereich für scrollbare Elemente">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Hier kannst du deine horizontal scrollbaren Inhalte einfügen -->

        </LinearLayout>

    </HorizontalScrollView>


</RelativeLayout>
